<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#C41212"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbText"
        android:layout_width="147dp"
        android:layout_height="23dp"
        android:text="@string/labelText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="154dp"
        android:layout_height="208dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toTopOf="@+id/lbText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cat"
        tools:ignore="ImageContrastCheck"

        />

    <Button
        android:id="@+id/btnActivity2"
        android:layout_width="148dp"
        android:layout_height="51dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#FF6398"
        android:text="@string/lbGoActivity2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfApodo" />

    <EditText
        android:id="@+id/tfApodo"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/lbApodo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbApodo" />

    <TextView
        android:id="@+id/lbUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbText" />

    <EditText
        android:id="@+id/tfUser"
        android:layout_width="241dp"
        android:layout_height="51dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/lbUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbUser" />

    <TextView
        android:id="@+id/lbPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfUser" />

    <EditText
        android:id="@+id/tfPass"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/lbPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbPass" />

    <TextView
        android:id="@+id/lbApodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbApodo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPass" />

</androidx.constraintlayout.widget.ConstraintLayout>